[NOISSUE] refactored unlock and checkpin endpoints
